--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,15 +179,19 @@ dependencies {
         implementation jscFlavor
     }
 
-    // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:33.13.0')
+    // Import the BoM for the Firebase platform
+    implementation(platform("com.google.firebase:firebase-bom:33.13.0"))
+
+    // Add the dependency for the Realtime Database library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation("com.google.firebase:firebase-database")
 
     // Firebase Analytics
     implementation 'com.google.firebase:firebase-analytics'
 
     // Add other Firebase dependencies as needed
-    // implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-auth'
     // implementation 'com.google.firebase:firebase-firestore'
-    // implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.google.firebase:firebase-storage'
     // implementation 'com.google.firebase:firebase-messaging'
 }
