--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,11 +35,11 @@ allprojects {
 }
 
 plugins {
+  id 'com.android.application' version '7.3.0' apply false
   // ...
 
   // Add the dependency for the Google services Gradle plugin
   id 'com.google.gms.google-services' version '4.4.2' apply false
-
 }
 
 apply plugin: "expo-root-project"
